--- a/css/main.css
+++ b/css/main.css
@@ -217,7 +217,10 @@ hr {
 
 @media screen and (max-width: 40em) {
   h1 {
-    font-size: 4rem; }
+    font-size: 3rem;
+    line-height: 3.5rem; }
+  .right-wrap {
+    padding: 4% 2%; }
   .left {
     width: 100%; }
   .left-inner {
